src/test/ui/malformed/malformed-interpolated.ds
#![feature(dustc_attrs)]

macro_rules! check {
    ($expr: expr) => (
        #[dustc_dummy = $expr]
        use main as _;
    );
}

check!("0"); // OK
check!(0); // OK
check!(0u8); //~ ERROR suffixed literals are not allowed in attributes
check!(-0); //~ ERROR unexpected token: `-0`
check!(0 + 0); //~ ERROR unexpected token: `0 + 0`

fn main() {}
